# computer-graphics

./: .gitignore
color-spaces/: CMakeLists.txt  Makefile  main
color-spaces/dog/: dog.pnm  output.pnm  output.ppm
color-spaces/dog/cmy/: dog_1.pgm  dog_2.pgm  dog_3.pgm
color-spaces/dog/hsl/: dog_2.pgm  dog_3.pgm
color-spaces/dog/hsv/: dog_1.pgm  dog_2.pgm  dog_3.pgm
color-spaces/dog/ycbcr601/: dog_1.pgm  dog_2.pgm  dog_3.pgm
color-spaces/dog/ycbcr709/: dog_1.pgm  dog_2.pgm  dog_3.pgm
color-spaces/src/: UtilityConstants.h  main.cpp
color-spaces/src/color-models/: CMY.cpp  CMY.h  ColorModel.cpp  ColorModel.h  CylindricalColorModel.cpp  CylindricalColorModel.h  HSL.cpp  HSL.h  HSV.cpp  HSV.h  RGB.cpp  RGB.h  RGBColorSpaceTransformation.cpp  RGBColorSpaceTransformation.h  YCbCr.cpp  YCbCr.h  YCbCr601.cpp  YCbCr601.h  YCbCr709.cpp  YCbCr709.h  YCoCg.cpp  YCoCg.h
color-spaces/src/img-formats/: Image.cpp  Image.h  PNMImage.cpp
cross-correlation/: CMakeLists.txt  Makefile
cross-correlation/src/: main.cpp
cross-correlation/src/correlation/: AmplitudePhaseCorrelation.cpp  AmplitudePhaseCorrelation.h  Correlation.cpp  Correlation.h  PhaseCorrelation.cpp  PhaseCorrelation.h
cross-correlation/src/fft/: FFT.cpp  FFT.h
cross-correlation/src/img-formats/: Image.cpp  Image.h
image-dithering/: CMakeLists.txt  Makefile
image-dithering/src/: UtilityConstants.h  main.cpp
image-dithering/src/gradient/: FloydSteinbergDithering.cpp  FloydSteinbergDithering.h  Gradient.cpp  Gradient.h  OrderedDithering.cpp  OrderedDithering.h  RandomDithering.cpp  RandomDithering.h  SimpleGradient.cpp  SimpleGradient.h
image-scaling/: CMakeLists.txt  Makefile  lizard.pgm  main  output.pgm
image-scaling/src/: UtilityConstants.h  main.cpp
image-scaling/src/kernels/: BCSplines.cpp  BCSplines.h  Bilinear.cpp  Bilinear.h  Kernel.cpp  Kernel.h  Lanczos3.cpp  Lanczos3.h
image-scaling/src/transformations/: KernelTransformation.cpp  KernelTransformation.h  NearestNeighbor.cpp  NearestNeighbor.h  SeparableTransformation.cpp  SeparableTransformation.h
image-thresholding/: CMakeLists.txt  Makefile  README.md
image-thresholding/images/: brain.pgm  image_1_noise.pgm  image_2_blur.pgm
image-thresholding/images/src/: rice.pgm
image-thresholding/src/: Otsu.cpp  Otsu.h  main.cpp
image-thresholding/src/img-formats/: Image.h
jpeg-decoding/: CMakeLists.txt
jpeg-decoding/src/: main.cpp
jpeg-decoding/src/img-formats/: JPEG.cpp  JPEG.h  PNM.cpp
png-decoding/: CMakeLists.txt  dog.pnm
png-decoding/src/: main.cpp
png-decoding/src/img-formats/: PNG.cpp  PNG.h  PNM.h
simple-transformations/: CMakeLists.txt  Makefile
simple-transformations/src/: main.cpp
simple-transformations/src/img-formats/: Image.cpp  Image.h  PNMImage.cpp  PNMImage.h
simple-transformations/src/pixels/: Pixel.h  Rgb.cpp  Rgb.h
simple-transformations/test-imgs/: beatles.pnm  car.pnm  dog.pnm  forest.pnm
